Fix missing left border for all Jump links

--- a/assets/sass/patterns/molecules/jump-link.scss
+++ b/assets/sass/patterns/molecules/jump-link.scss
@@ -1,7 +1,11 @@
 @import "../../definitions";
 
+.jump-link__wrapper {
+  background-color: $color-text-ui-background;
+}
+
 .jump-link__list {
-  background-color: #fff;
+  border-left: 2px solid $color-text-ui-background-light-gray;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -23,6 +27,7 @@
 }
 
 .jump-link__active {
+  @include margin(-2, "left");
   color: $color-text;
   border-left: 2px solid $color-primary;
 }
@@ -38,7 +43,7 @@
 }
 
 .wrapper--content {
-  .jump-link__list {
+  .jump-link__wrapper {
     display: none;
 
     @media only screen and (min-width: #{get-rem-from-px($bkpt-site--x-wide)}em) {
